Implemented new functionality of registering a new user
